objects/Quarterly_Recertification_Analytics__c.object
<CustomObject>
    <description>Field types mapped to analytics for reporting purposes.</description>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hedging_Reports__c</fullName>
        <label>Hedging Reports</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investor_Scorecards__c</fullName>
        <label>Investor Scorecards</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRA_Exhibit_B_and_all_Schedules__c</fullName>
        <label>MRA Exhibit B and all Schedules</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRA_Schedule_1_Financial_Covenants__c</fullName>
        <label>MRA Schedule 1 - Financial Covenants</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Control_Reports__c</fullName>
        <label>Quality Control Reports</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unaudited_Balance_Sheet_YTD__c</fullName>
        <label>Unaudited Balance Sheet YTD</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unaudited_P_L_YTD__c</fullName>
        <label>Unaudited P&amp;L YTD</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unaudited_P_L_for_the_Quarter__c</fullName>
        <label>Unaudited P&amp;L for the Quarter</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Quarterly Recertification Analytics</label>
    <nameField>
        <displayFormat>AWHL-{00000}</displayFormat>
        <label>Quarterly Recertification Analytics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quarterly Recertification Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>